@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T16:14:13Z",
-  "count" : 42,
-  "count_minmax" : [ 0, 42 ],
-  "count_prev_day_inc" : 99,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-26T00:50:47Z",
+  "count" : 28,
+  "count_minmax" : [ 28, 42 ],
+  "count_decinc" : [ -14, +0 ],
   "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
