@@ -1,21 +1,14 @@
 {
-  "timestamp" : "2022-05-25T16:13:10Z",
-  "count_outdated" : 227,
-  "uniques_outdated" : 11,
-  "count" : 365,
+  "timestamp" : "2022-05-26T00:50:47Z",
+  "count_outdated" : 287,
+  "uniques_outdated" : 12,
+  "count" : 377,
   "uniques" : 20,
   "views" : [
     {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 34,
-      "count_minmax": [ 3, 60 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 42,
-      "count_minmax": [ 42, 42 ],
+      "count": 28,
+      "count_minmax": [ 28, 42 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
