@@ -1,15 +1,10 @@
 {
-  "count": 138,
+  "count": 90,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 34,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 42,
+      "count": 28,
       "uniques": 1
     },
     {
