@@ -1,3 +1,10 @@
+2022-05-26T00:50:47Z:
+* notice: last 14d: unq all: 1 90
+* notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 20 365
+* notice: next accum: outdated-unq outdated-all / unq all: 12 287 / 20 377
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -14 / +0 +0 -0 -14 / 1 28
+* notice: changed dates: [2022-05-12]
+
 2022-05-25T16:13:10Z:
 * notice: last 14d: unq all: 1 138
 * notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 20 388
